Import of OVID/Readonly-BeginLift-0.02 from CPAN.
gitpan-cpan-distribution: Readonly-BeginLift
gitpan-cpan-version:      0.02
gitpan-cpan-path:         OVID/Readonly-BeginLift-0.02.tar.gz
gitpan-cpan-author:       OVID
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Readonly-BeginLift
 
+0.02    February 11, 2010
+        - Include the dependency on parent.pm and Readonly
+
 0.01    February 11, 2010
         - Allow Readonly to execute at BEGIN time.
 
