--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Readonly-BeginLift
 
+0.03    February 13, 2010
+        - Lift Readonly::Scalar and friends at compile time. Thanks to
+          ELLIOTJS (clonezone) for the suggestion.  This allows
+          Readonly::Scalar to use Readonly::XS if it's installed.
+
 0.02    February 11, 2010
         - Include the dependency on parent.pm and Readonly
 
